<com.spreedly.securewidgets.SecureFormLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:id="@+id/credit_card_form"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/spreedly_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.spreedly.securewidgets.SecureTextField
        android:id="@id/spreedly_credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.spreedly.securewidgets.SecureTextField>
    <com.spreedly.securewidgets.SecureTextField
        android:id="@id/spreedly_ccv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/spreedly_cc_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="creditCardYear"
            android:hint="@string/year_hint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/spreedly_cc_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="creditCardMonth"
            android:hint="@string/month_hint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textIsSelectable="true" />

    <Button
        android:id="@id/spreedly_cc_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />
</com.spreedly.securewidgets.SecureFormLayout>